--- a/style.css
+++ b/style.css
@@ -14,6 +14,9 @@ body{
     text-transform: uppercase;
 }
 
+div.border{border_width:3px; border_color: white;}
+
+
 .h2-font {  
     font-size: 2em;
     text-transform: upper-case;
